--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -124,8 +124,8 @@ a[href|="/filly"]
 
 .author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
 
-.author[href$="/pres"]:after {content: ' Of the Pumpkin Patch ';}
-.author[href$="/pres"]:before {content: ' King ';}
+.author[href$="/presidentcelestia"]:after {content: ' Of the Pumpkin Patch ';}
+.author[href$="/presidentcelestia"]:before {content: ' King ';}
 
 .author:before {content: 'Queen ';}
 
