--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -442,7 +442,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -539,7 +539,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -619,11 +619,11 @@ a[href|="/raridoubt"], a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/se
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"]
+a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"]
+a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
@@ -1227,3 +1227,5 @@ a[href|="/teamtaco"] {width:200px;height:146px;background-position: -128px -117p
 a[href|="/ablick"] {width:75px;height:105px;background-position: -265px 0;}
 a[href|="/cmcship"] {width:200px;height:129px;background-position: -119px -263px;}
 a[href|="/swappleaww"] {width:150px;height:99px;background-position: -340px 0;}
+a[href|="/flutterbutter"] {width:125px;height:99px;background-position: -490px 0;}
+a[href|="/twilightthebearded"] {width:129px;height:150px;background-position: -328px -99px;}
