--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -130,7 +130,7 @@ div#header-bottom-left ul.tabmenu {
 
 .side h6 {
   position: absolute;
-  top: 118px;
+  top: 111px;
   left: 220px;
   font-size: 12px;
   padding: 14px 0px 14px 60px;
@@ -317,6 +317,9 @@ body .disabled .morelink a:hover {
     *             EMOTES
     *  
     ************************/
+
+.md { overflow: auto; }
+
     /**************
     A Emoticons
     **************/
@@ -623,7 +626,7 @@ a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rs
   background-position:-300% -500%;
 }
 
-a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|="/rsoawesome"],a[href|="/shiningpride"],a[href|="/rshiningpride"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],.side .md table tr:nth-of-type(13) td:nth-of-type(4):after,.flair-braeburn {
+a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|="/rsoawesome"],a[href|="/shiningpride"],a[href|="/rshiningpride"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/sunsetwrongneighborhood"],a[href|="/sswrongneighborhood"],a[href|="/sunface"],.side .md table tr:nth-of-type(13) td:nth-of-type(4):after,.flair-braeburn {
   background-position:-300% -600%;
 }
 
@@ -774,7 +777,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
   width:32px;
 }
 
-a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],a[href|="/sunsetwow"],a[href|="/sswow"],a[href|="/sunsetsalute"],a[href|="/sssalute"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],a[href|="/sunsetdress"],a[href|="/ssdress"],a[href|="/sunsetquietgame"],a[href|="/ssquietgame"],a[href|="/sunsetupvote"],a[href|="/ssupvote"] {
+a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/sunsetstare"],a[href|="/ssstare"],a[href|="/sunsetbored"],a[href|="/ssbored"],a[href|="/sunsetpuppyeyes"],a[href|="/sspuppyeyes"],a[href|="/sunsetderp"],a[href|="/ssderp"],a[href|="/sunsethappy"],a[href|="/sshappy"],a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/sleepysunset"],a[href|="/sleepyss"],a[href|="/sunsetohyou"],a[href|="/ssohyou"],a[href|="/sunsetsneer"],a[href|="/sssneer"],a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/searchingsunset"],a[href|="/searchingss"],a[href|="/sunsetshiver"],a[href|="/ssshiver"],a[href|="/sunsetshrug"],a[href|="/ssshrug"],a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/sunsetindeed"],a[href|="/ssindeed"],a[href|="/ifyouknowwhatimean"],a[href|="/sunsetwait"],a[href|="/sswait"],a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],a[href|="/sunsetuhuh"],a[href|="/ssuhuh"],a[href|="/sunsetwow"],a[href|="/sswow"],a[href|="/sunsetsalute"],a[href|="/sssalute"],a[href|="/sunsetpokerstatic"],a[href|="/sspokerstatic"],a[href|="/sunsetdress"],a[href|="/ssdress"],a[href|="/sunsetquietgame"],a[href|="/ssquietgame"],a[href|="/sunsetupvote"],a[href|="/ssupvote"],a[href|="/sunsetwrongneighborhood"],a[href|="/sswrongneighborhood"],a[href|="/sunface"] {
   display:block;
   clear:none;
   float:left;
@@ -1598,9 +1601,11 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 
 /*Row/col sizes: (And some undoing for number col*/
 .side .md table th {
-  height:20px;
+  height:14px;
   border:0;
 }
+
+.side .md table code { border: none; }
 
 .side .md tr,td {
   border-style:none 1px solid #CCC 1px solid #CCC !important;
@@ -1746,8 +1751,8 @@ a.thumbnail.self{margin-right:-14px}
   background: -o-linear-gradient(#fdfcc7, #e98b97, #dd99d9);
   background: linear-gradient(#fdfcc7, #e98b97, #dd99d9);
   color: #4a243c!important;
-  margin-left:-6px;
-  padding-right:11px;
+  margin-left:-11px;
+  padding-right:22px;
   display:block;
   overflow:visible;
   white-space:nowrap;
