--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -133,6 +133,7 @@ margin-right:0px;
     height:13px;  
     line-height:14px;  
     margin-top: 0px;
+    overflow: hidden;
 }  
 .res-nightmode #sr-header-area{  
     background: #F6F9FC !important;  
@@ -404,10 +405,8 @@ a.author {
     font-size: small;
 }  
 
-.side .usertext-body .md {  
-  padding-bottom:10px;
-  padding-top:5px;
-  padding-left: 10px;
+.side .usertext-body .md {
+  padding: 5px 5px 10px;
   margin-top:1px;
   background-color:#F6F9FC !important;
   width: 288px;
@@ -675,23 +674,24 @@ padding-left:0px !important;
 .res-nightmode .link .score.likes {  
     color:#999 !important;  
 }  
+
 .res #RESShortcutsRight, #RESShortcutsLeft, #RESShortcutsAdd {
-    height:10px !important;
-    width:11px !important;
     background-color:transparent !important;
     margin-top:-1px !important;
+    font-size: 12px !important;
 }
 
 .res #RESShortcutsEditContainer {
-    height: 10px !important;
-    background:#F6F9FC !important;
+    background-color:transparent !important;
+    font-size: 12px !important;
+    text-align: center !important;
 }
 #RESShortcutsSort {
-    width:11px !important;
-    height:10px !important;
-    background:#F6F9FC !important;
+    background-color:transparent !important;
     margin-top:-3px !important;
+    font-size: 12px !important;
 }
+
 #sort-menu.drop-choices {
     margin-top:7px !important;
 }
@@ -725,8 +725,15 @@ background-color:#222222 !important;
     }
 .titlebox table {
     display: none;
-    clear: both
+    clear: both;
+    margin-left: -6px;
     }
+.titlebox .md td {
+    padding: 0px;
+    }
+.titlebox .md thead {
+    display: none;
+}
 .side div.usertext-body:hover table {
     display: block;
     clear: both
@@ -762,106 +769,37 @@ That big yellow box thing
   .titlebox form {
   position: static
   }
-.titlebox .usertext-body .md p > em {
-    width: 33%;
+/* the 'table ~ table' thing is to select the second table in the sidebar list
+ * aka the one after the emotes table
+ */
+.titlebox .usertext-body .md table ~ table {
+    width: 100%;
     background-color: #FFFEE6;
-    border: 1px solid #E1B000;
     position: absolute;
-    font-size: 1em;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    height: 13px;
+    font-size: 13px;
     top: 116px;
     left: 0px;
     z-index: 1;
-    margin: 0;
-    white-space:nowrap;
-    padding-left: 30px;
+    margin: 0px;
     list-style: none;
     display: block;
-    overflow: hidden;
     text-align: center;
-    }
-.titlebox .usertext-body .md p > em li{
-margin: 0px;
+    font-weight: bold;
+    text-decoration: underline;
+    display: table;
 }
-.titlebox .usertext-body .md p > em a {
-font-weight:bold;
-text-decoration:underline;
+.titlebox .usertext-body .md table ~ table tbody {
+    width: 100%;
 }
-
-/* Second Linkable bar
-*/
- .content {
-   margin-top: 33px;
-   }
-  .titlebox form {
-  position: static
-  }
-.titlebox .usertext-body .md h5 {
+.titlebox .usertext-body .md table ~ table tr {
+    width: 100%;
+}
+.titlebox .usertext-body .md table ~ table td {
+    padding-top: 5px;
+    padding-bottom: 5px;
     width: 33%;
-    background-color: #FFFEE6;
     border: 1px solid #E1B000;
-    position: absolute;
-    font-size: 1em;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    height: 13px;
-    top: 116px;
-    left: 66%;
-    z-index: 1;
-    margin: 0;
-    white-space:nowrap;
-    padding-left: 30px;
-    list-style: none;
-    display: block;
-    overflow: hidden;
-    text-align: center;
-    }
-.titlebox .usertext-body .md h5 li{
-margin: 0px;
 }
-.titlebox .usertext-body .md h5 a {
-font-weight:bold;
-text-decoration:underline;
-}
-
-/* Third Linkable bar
-*/
- .content {
-   margin-top: 33px;
-   }
-  .titlebox form {
-  position: static
-  }
-.titlebox .usertext-body .md h6 {
-    width: 32.1%;
-    background-color: #FFFEE6;
-    border: 1px solid #E1B000;
-    position: absolute;
-    font-size: 1em;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    height: 13px;
-    top: 116px;
-    left: 33%;
-    z-index: 1;
-    margin: 0;
-    white-space:nowrap;
-    padding-left: 30px;
-    list-style: none;
-    display: block;
-    overflow: hidden;
-    text-align: center;
-    }
-.titlebox .usertext-body .md h6 li{
-margin: 0px;
-}
-.titlebox .usertext-body .md h6 a {
-font-weight:bold;
-text-decoration:underline;
-}
-
 
 .wiki-page .md {
 background: white;
