--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -841,6 +841,12 @@ border: 2px solid black; border-radius: 20px;
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:grey;}
 
+.flair-mintmelody
+{ color:green; 
+border: 2px solid green; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:white;}
+
 /* EMOTE SPRITESHEETS (BY CHARACTER) */
 
 /* GAME CHANGER */
