--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -57,7 +57,7 @@ a.author.id-t2_aj4cg:after {content:" ɐ ɥoɹsǝ"}
 
 a.author.id-t2_a26t0{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_a26t0:after{font-size:8px!important;display:block;letter-spacing:normal}
-a.author.id-t2_a26t0:after {content:"I had nothing to do with anything in here"}
+a.author.id-t2_a26t0:after {content:"I have nothing to do with anything in here"}
 
 a.author[href$="/eytosh"] {
     font-size: 0px !important;
