--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -157,6 +157,9 @@ a.author[href$="woodledoodledoodle"]:before {
 a.author[href$="timbaer"]:before {
  content: url(%%norippe2%%) 
 }
+a.author[href$="ovenmitt_bandit"]:after {
+    content: url(%%lambda%%)
+    }
 a.author[href$="Bionic21"]:before {
  content: url(%%backburner%%) 
 }
