--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -92,6 +92,8 @@ body { background: url(%%background%%) no-repeat center; }
     text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
 }
 
+.md { overflow: auto; }
+
 .flair
 {
  padding:0;
@@ -413,16 +415,12 @@ a[href^="/spaceholder"][href*="-combine"]+a{
   margin-bottom: -999px;
 }
 
-a[href="/forrealzies"],a[href="/rforrealzies"]
-{display:block;clear:none;float:left;width:195px;height:205px;background-image:url(%%forrealzies%%)!important}
-
 a[href|="/rajlie"],a[href|="/ra00"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/rflutterjerk"],a[href|="/ra20"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/rcelestiamad"],a[href|="/ra11"],a[href|="/rtwicrazy"],a[href|="/ra21"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/rlunawait"],a[href|="/ra12"],a[href|="/rpaperbagderpy"],a[href|="/rpaperbagwizard"],a[href|="/rderpwizard"],a[href|="/ra22"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rajhappy"],a[href|="/rhapplejack"],a[href|="/ra03"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/ra13"],a[href|="/rtwibeam"],a[href|="/ra23"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/rraritydaww"],a[href|="/ra04"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/ra14"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/rajsup"],a[href|="/rajwhatsgood"],a[href|="/ra05"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/ra15"],a[href|="/rrdcry"],a[href|="/ra25"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/ra35"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/ra06"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/ra16"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/ra26"],a[href|="/rrarityreally"],a[href|="/ra36"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ra07"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra17"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/ra27"],a[href|="/rapplegasp"],a[href|="/ra37"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra08"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/ra18"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/ra28"],a[href|="/rrarishock"],a[href|="/ra38"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra09"],a[href|="/rchrysalis"],a[href|="/rqueenchrysalis"],a[href|="/rchangelingqueen"],a[href|="/ra19"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/ra29"],a[href|="/rapplederp"],a[href|="/ra39"],
 a[href|="/rswagintosh"],
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"],
 a[href|="/rrdsitting"],a[href|="/rc00"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/rchangeling"],a[href|="/rc31"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/rhahaha"],a[href|="/rc22"],a[href|="/rrdscared"],a[href|="/rc32"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rc33"],a[href|="/rc23"],a[href|="/rajfrown"],a[href|="/rc04"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/rjoy"],a[href|="/rc24"],a[href|="/rwhattheflut"],a[href|="/rc34"],a[href|="/rraritysad"],a[href|="/rc05"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/rderp"],a[href|="/rc25"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rc36"],a[href|="/rlouder"],a[href|="/rc06"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/rderpyshock"],a[href|="/rc26"],a[href|="/rpinkamina"],a[href|="/rc07"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/rlunagasp"],a[href|="/rc27"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rc37"],a[href|="/rc08"],a[href|="/rcelestia"],a[href|="/rc18"],a[href|="/rangel"],a[href|="/rc28"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rc38"],a[href|="/rc09"],a[href|="/rzecora"],a[href|="/rc19"],a[href|="/rphotofinish"],a[href|="/rc29"],a[href|="/rppreally"],a[href|="/rc39"],
-a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/re23"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/rdealwithit"],a[href|="/re24"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/re05"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/rrdsalute"],a[href|="/re25"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/re06"],a[href|="/rcolgate"],a[href|="/re16"],a[href|="/rcheerilee"],a[href|="/re26"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/re27"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/rspikewtf"],a[href|="/re18"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"], a[href|="/re31"], a[href|="/rlunamad"], a[href|="/re32"], a[href|="/rdiscordsad"], a[href|="/re33"], a[href|="/rmaud"], a[href|="/re34"], a[href|="/rpinkiepout"],
-a[href|="/rsmooze"], 
-a[href|="/rforrealzies"]
+a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/re23"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/rdealwithit"],a[href|="/re24"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/re05"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/rrdsalute"],a[href|="/re25"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/re06"],a[href|="/rcolgate"],a[href|="/re16"],a[href|="/rcheerilee"],a[href|="/re26"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/re27"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/rspikewtf"],a[href|="/re18"],a[href|="/rawwyeah"],a[href|="/re28"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/re29"], a[href|="/re31"], a[href|="/rlunamad"], a[href|="/re32"], a[href|="/rdiscordsad"], a[href|="/re33"], a[href|="/rmaud"], a[href|="/re34"], a[href|="/rpinkiepout"], a[href|="/rsmooze"], 
+a[href|="/rforrealzies"],a[href|="/rsonatabattle"],a[href|="/rsdbattle"],a[href|="/rsonatagrin"],a[href|="/rsdgrin"],a[href|="/rnaivesonata"],a[href|="/rnaivesd"],a[href|="/rsonatasmirk"],a[href|="/rsdsmirk"],a[href|="/rsonatasiren"],a[href|="/rsdsiren"],a[href|="/rsonatashrug"],a[href|="/rsdshrug"],a[href|="/rcutesonata"],a[href|="/rcutesd"],a[href|="/rconfidentsonata"],a[href|="/rconfidentsd"],a[href|="/rfearfulsonata"],a[href|="/rfearfulsd"],a[href|="/rsonatapunch"],a[href|="/rsdpunch"],a[href|="/rsonatawoah"],a[href|="/rsdwoah"],a[href|="/tacotuesday"],a[href|="/rsonataglee"],a[href|="/rsdglee"],a[href|="/rtacotuesday"],a[href|="/rsonatasmug"],a[href|="/rsdsmug"],a[href|="/rsonatawave"],a[href|="/rsdwave"]
 {
 -webkit-transform:scaleX(-1);
 -moz-transform:scaleX(-1);
@@ -430,6 +428,12 @@ a[href|="/rforrealzies"]
 -o-transform:scaleX(-1);
 transform:scaleX(-1);
 }
+
+a[href="/forrealzies"],a[href="/rforrealzies"]
+{display:block;clear:none;float:left;width:195px;height:205px;background-image:url(%%forrealzies%%)!important}
+
+a[href|="/sonatatuesday"],a[href|="/sdtuesday"],a[href|="/didsomeponysaytuesday"]
+{display:block;clear:none;float:left;width:292px;height:200px;background-image:url(%%tuesday%%)!important}
 
 a[href|="/sonatalook"],a[href|="/sdlook"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: 0 0;}
@@ -473,92 +477,47 @@ a[href|="/sonataponyshrug"],a[href|="/sdpshrug"]
 a[href|="/rsonataponyshrug"],a[href|="/rsdpshrug"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -200% -300%;}
 
-a[href|="/sonatabattle"],a[href|="/sdbattle"]
+a[href|="/sonatabattle"],a[href|="/sdbattle"],a[href|="/rsonatabattle"],a[href|="/rsdbattle"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 0;}
 
-a[href|="/rsonatabattle"],a[href|="/rsdbattle"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -100%;}
-
-a[href|="/sonatagrin"],a[href|="/sdgrin"]
+a[href|="/sonatagrin"],a[href|="/sdgrin"],a[href|="/rsonatagrin"],a[href|="/rsdgrin"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% 0;}
 
-a[href|="/rsonatagrin"],a[href|="/rsdgrin"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -100%;}
-
-a[href|="/naivesonata"],a[href|="/naivesd"]
+a[href|="/naivesonata"],a[href|="/naivesd"],a[href|="/rnaivesonata"],a[href|="/rnaivesd"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% 0;}
 
-a[href|="/rnaivesonata"],a[href|="/rnaivesd"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -100%;}
-
-a[href|="/sonatasmirk"],a[href|="/sdsmirk"]
+a[href|="/sonatasmirk"],a[href|="/sdsmirk"],a[href|="/rsonatasmirk"],a[href|="/rsdsmirk"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% 0;}
 
-a[href|="/rsonatasmirk"],a[href|="/rsdsmirk"]
+a[href|="/sonatasiren"],a[href|="/sdsiren"],a[href|="/rsonatasiren"],a[href|="/rsdsiren"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -100%;}
+
+a[href|="/sonatashrug"],a[href|="/sdshrug"],a[href|="/rsonatashrug"],a[href|="/rsdshrug"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -100%;}
+
+a[href|="/cutesonata"],a[href|="/cutesd"],a[href|="/rcutesonata"],a[href|="/rcutesd"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -100%;}
+
+a[href|="/confidentsonata"],a[href|="/confidentsd"],a[href|="/rconfidentsonata"],a[href|="/rconfidentsd"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -100%;}
 
-a[href|="/sonatasiren"],a[href|="/sdsiren"]
+a[href|="/fearfulsonata"],a[href|="/fearfulsd"],a[href|="/rfearfulsonata"],a[href|="/rfearfulsd"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -200%;}
 
-a[href|="/rsonatasiren"],a[href|="/rsdsiren"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -300%;}
-
-a[href|="/sonatashrug"],a[href|="/sdshrug"]
+a[href|="/sonatapunch"],a[href|="/sdpunch"],a[href|="/whatdoyouknowaboutgoodfruitpunch"],a[href|="/rsonatapunch"],a[href|="/rsdpunch"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -200%;}
 
-a[href|="/rsonatashrug"],a[href|="/rsdshrug"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -300%;}
-
-a[href|="/cutesonata"],a[href|="/cutesd"]
+a[href|="/sonatawoah"],a[href|="/sdwoah"],a[href|="/rsonatawoah"],a[href|="/rsdwoah"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -200%;}
 
-a[href|="/rcutesonata"],a[href|="/rcutesd"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -300%;}
-
-a[href|="/confidentsonata"],a[href|="/confidentsd"]
+a[href|="/sonataglee"],a[href|="/sdglee"],a[href|="/tacotuesday"],a[href|="/rsonataglee"],a[href|="/rsdglee"],a[href|="/rtacotuesday"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -200%;}
 
-a[href|="/rconfidentsonata"],a[href|="/rconfidentsd"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -300%;}
+a[href|="/sonatasmug"],a[href|="/sdsmug"],a[href|="/rsonatasmug"],a[href|="/rsdsmug"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -300%;}
 
-a[href|="/fearfulsonata"],a[href|="/fearfulsd"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -400%;}
-
-a[href|="/rfearfulsonata"],a[href|="/rfearfulsd"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -500%;}
-
-a[href|="/sonatapunch"],a[href|="/sdpunch"],a[href|="/whatdoyouknowaboutgoodfruitpunch"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -400%;}
-
-a[href|="/rsonatapunch"],a[href|="/rsdpunch"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -500%;}
-
-a[href|="/sonatawoah"],a[href|="/sdwoah"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -400%;}
-
-a[href|="/rsonatawoah"],a[href|="/rsdwoah"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -200% -500%;}
-
-a[href|="/sonataglee"],a[href|="/sdglee"],a[href|="/tacotuesday"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -400%;}
-
-a[href|="/rsonataglee"],a[href|="/rsdglee"],a[href|="/rtacotuesday"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -300% -500%;}
-
-a[href|="/sonatatuesday"],a[href|="/sdtuesday"],a[href|="/didsomeponysaytuesday"]
-{display:block;clear:none;float:left;width:292px;height:200px;background-image:url(%%tuesday%%)!important; background-position: 0 0;}
-
-a[href|="/sonatawave"],a[href|="/sdwave"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -600%;}
-
-a[href|="/rsonatawave"],a[href|="/rsdwave"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -700%;}
-
-a[href|="/sonatasmug"],a[href|="/sdsmug"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -600%;}
-
-a[href|="/rsonatasmug"],a[href|="/rsdsmug"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: 0 -700%;}
+a[href|="/sonatawave"],a[href|="/sdwave"],a[href|="/rsonatawave"],a[href|="/rsdwave"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sonata-sheet%%)!important; background-position: -100% -300%;}
 
 a[href|="/sp"]{display:inline-block;padding-right:100%;width:0px;height:0px}
 
