Stylesheet/emote/tag updates 2015-02-09

--- a/source-css/ariablaze.css
+++ b/source-css/ariablaze.css
@@ -71,6 +71,18 @@ a[href|="/spoiler"]:hover {
     color: #fff !important;
 }
 
+a[href|="/asadagio"], a[href|="/asad"] {
+    color: #FE8800 !important;
+}
+
+a[href|="/asaria"], a[href|="/asab"] {
+    color: #692989 !important;
+}
+
+a[href|="/assonata"], a[href|="/assd"] {
+    color: #51ABC7 !important;
+}
+
 /*** Theme ***/
 
 .subscribers .word, .users-online .word { display: none; }
