--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -280,7 +280,7 @@ background-position: 0% -800%
 /*Bacond End*/
 
 body{background: #ffffff url(%%twilightbackground%%) no-repeat fixed center center}
-.content .md h1{color:#789922;border-bottom:none;padding-bottom:0px;font-size:1em;margin:0}
+.content .md h1{color:#789922;border-bottom:none;padding-bottom:0px;font-size:1em;margin:0;font-weight:100}
 .content .md h1:before{content:">"}
 
 .res-nightmode body {
@@ -1266,14 +1266,8 @@ a[href|="/ripferrbearand20"] {
 
 /*Name Changes are Below*/
 
-a.author[href$="bryvood"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="bryvood"]:before {font-size:10px!important; visibility:visible!important; content: "Miss Doom"}
-
 a.author[href$="BlameTheJungler"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:visible!important; content: "LeafOnTheWind"}
-
-a.author[href$="HeWho_MustNotBeNamed"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibility:visible!important; content: "Qui non est Named"}
 
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Day1ightDark1e"}
@@ -1283,9 +1277,6 @@ a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:vi
 
 a.author[href$="Fuzzy_Gauntlets"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Fuzzy_Gauntlets"]:before {font-size:10px!important; visibility:visible!important; content: "Fuzzy_Infinity_Gauntlets"}
-
-a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZC"}
 
 a.author[href$="1125a"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!important; content: "1125au"}
