--- a/source-css/ponymotesextra2.css
+++ b/source-css/ponymotesextra2.css
@@ -58,3 +58,4 @@ a[href|="/cannotcontainrage"] {background:url(%%cannotcontainrage%%) no-repeat;w
 a[href|="/lyraquestion"] {background:url(%%lyraquestion%%) no-repeat;width:300px;height:300px;display:block;float:left;}
 a[href|="/bigmaceatsbigmac"] {background:url(%%bigmaceatsbigmac%%) no-repeat;width:120px;height:104px;display:block;float:left;}
 a[href|="/fluffleshuffle"] {background:url(%%fluffleshuffle%%) no-repeat;width:125px;height:81px;display:block;float:left;}
+a[href|="/implightsparkle"], a[href|="/implylightsparkle"] {background:url(%%implightsparkle%%) no-repeat;width:92px;height:100px;display:block;float:left;}
