--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -140,7 +140,7 @@ div#header-bottom-left ul.tabmenu {
 }
 
 .side h6 del { color: inherit }
-.side sup:nth-of-type(1) { margin: 10px 2em }
+.side sup:nth-of-type(1) { padding-left: 40px }
 .side .usertext-body ul a { font-weight: bold }
 
 .content {
@@ -1848,4 +1848,4 @@ input[value="t3_xy2aw"] + div.usertext-body .SuperRedditAltTextDisplay_Text {
     content: "NSFW emote!";
 }
 
-a.author[href$="MillennialDan"]:before{content:"Totally Not "}
+a.author[href$="MillennialDan"]:before{content:"Totally "}
