--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,13 @@
+a[href^="/lyrashark"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 99px;
+    height: 140px;
+    background-image: url(%%lyrashark%%)
+    }
+
 a[href^="/headlesschicken"] {
     background-position: 0px 0px;
     display: block;
@@ -7,6 +17,7 @@ a[href^="/headlesschicken"] {
     height: 105px;
     background-image: url(%%easemyscoot%%)
     }
+
 a[href^="/dashbat"] {
     background-position: 0px 0px;
     display: block;
@@ -16,7 +27,6 @@ a[href^="/dashbat"] {
     height: 140px;
     background-image: url(%%rdbreat%%)
     }
-
 
 a[href^="/easemyscoots"] {
     background-position: 0px 0px;
