--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -94,6 +94,18 @@ body { background: url(%%background%%) no-repeat center; }
 
 .md { overflow: auto; }
 
+a[href|="/asadagio"], a[href|="/asad"] {
+    color: #FE8800 !important;
+}
+
+a[href|="/asaria"], a[href|="/asab"] {
+    color: #692989 !important;
+}
+
+a[href|="/assonata"], a[href|="/assd"] {
+    color: #51ABC7 !important;
+}
+
 .flair
 {
  padding:0;
